Add design file
